kubernetes/immich/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    # Cert-manager annotation to automatically request and manage the certificate
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/forwarded-headers-insecure: "true"
    traefik.ingress.kubernetes.io/proxy-protocol-insecure: "true"
  labels:
    app: immich
spec:
  rules:
    - host: immich.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
  tls:
    - hosts:
        - immich.kube-prod-d1.mclacken.net
      secretName: immich-dashboard-certificate-secret
